--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <header class="bg-[#6c79f2] text-white">
+  <header class="bg-[#6c79f2] text-white sticky top-0">
     <nav class="flex justify-around p-5">
         <div class="logo flex items-center gap-2">
             <img class="w-[25px] h-[25px] rounded-full" src="/icon/image 1.png" alt="">
@@ -34,7 +34,7 @@
     </div>
   </section>
   <section>
-    <div class="countainer flex justify-center mx-auto gap-5 bg-[#d9d9d9] w-[1200px]">
+    <div class="countainer flex justify-center mx-auto gap-5 bg-[#d9d9d9] w-[1200px] ">
       <a href="">Kategori</a>
       <a href="">Besi Beton</a>
       <a href="">Bata Ringan</a>
@@ -67,8 +67,28 @@
       <img class="w-[100px] h-[100px]" src="/image/triplek.png" alt="">
       <img class="w-[100px] h-[100px]" src="/image/cat dinding.png" alt="">
       <img class="w-[100px] h-[100px]" src="/image/kloset.png" alt="">
-      <img class="w-[100px] h-[100px]" src="/image/baut.png" alt="">
+
     </div>
   </section>
+    <div class="mt-[100px]">
+      <h1 class="text-center font-bold text-[25px]">Produk Kami</h1>
+      <div class="grid grid-cols-4 place-items-center gap-9 mt-[50px]">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/ASBES.jpg" alt="">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/KAYU.jpg" alt="">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/KAWAT.jpg" alt="">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/PAKU.jpg" alt="">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/PIPA.jpg" alt="">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/SEMEN.jpg" alt="">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/th.jpg" alt="">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/GIPSUM.jpg" alt="">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/UBIN.jpg" alt="">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/BATAKO.jpg" alt="">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/GENTENG PLASTIK.jpg" alt="">
+        <img  class="w-[200px] h-[200px] rounded-[10px]" src="/image/PASIR.jpg" alt="">
+      </div>
+    </div>
+    <footer class="bg-[#4248f7] mt-[25px] flex items-center">
+      <h1 class="mx-auto font-bold text-[15px] text-center text-white h-[50px]">Jaya Makmur Bangunan</h1>
+    </footer>
 </body>
 </html>
